--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.3.2",
     "ethers": "^6.9.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
@@ -16,7 +17,9 @@
     "react-dom": "^18",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "viem": "^1.21.1",
+    "wagmi": "^1.4.12"
   },
   "devDependencies": {
     "@types/node": "^20",
