--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@rainbow-me/rainbowkit": "^1.3.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "ethers": "^6.9.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "pino-pretty": "^10.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^1.21.1",
     "wagmi": "^1.4.12"
   },
