--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^6.9.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "next-cloudinary": "^5.16.0",
     "pino-pretty": "^10.3.1",
     "react": "^18",
     "react-dom": "^18",
