--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@rainbow-me/rainbowkit": "^1.3.2",
+    "@types/firebase": "^3.2.1",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "ethers": "^6.9.0",
+    "firebase": "^10.7.1",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-cloudinary": "^5.16.0",
     "pino-pretty": "^10.3.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-slick": "^0.29.0",
